# SNF-simulations

./: .buildinfo  .git-blame-ignore-revs  .gitignore  BSD-3-Clause Licence  CITATION.cff  LICENSE.txt  README.md  __init__.py  about.html  add_casks.py  add_spec.py  command_line.py  define_proportions.py  genindex.html  index.html  load_and_scale.py  load_spec.py  objects.inv  prek.toml  py-modindex.html  pyproject.toml  scale.py  search.html  searchindex.js  setup.py
.doctrees/: about.doctree  environment.pickle  index.doctree
.doctrees/apidocs/: index.doctree
.doctrees/apidocs/snf_simulations/: snf_simulations._version.doctree  snf_simulations.cask.doctree  snf_simulations.dashboard.doctree  snf_simulations.data.doctree  snf_simulations.data.fispin.doctree  snf_simulations.data.iaea.doctree  snf_simulations.data.mendeleev.doctree  snf_simulations.data.utils.doctree  snf_simulations.detector.doctree  snf_simulations.doctree  snf_simulations.physics.doctree  snf_simulations.scripts.command_line.doctree  snf_simulations.scripts.dashboard.doctree  snf_simulations.scripts.doctree  snf_simulations.spec.doctree  snf_simulations.utils.doctree
.doctrees/contributing/: contributing.doctree  development.doctree  index.doctree
.doctrees/user_guide/: cask.doctree  dashboard.doctree  flux.doctree  index.doctree  multiple_casks.doctree  spectrum.doctree
.github/workflows/: documentation.yml  prek.yml  publish.yml  pytest.yml
_modules/: index.html
_modules/snf_simulations/: cask.html  detector.html  physics.html  spec.html  utils.html
_modules/snf_simulations/data/: fispin.html  iaea.html  mendeleev.html  utils.html
_modules/snf_simulations/scripts/: command_line.html
_sources/: about.md.txt
_sources/apidocs/: index.rst.txt
_sources/apidocs/snf_simulations/: snf_simulations._version.md.txt  snf_simulations.cask.md.txt  snf_simulations.dashboard.md.txt  snf_simulations.data.fispin.md.txt  snf_simulations.data.iaea.md.txt  snf_simulations.data.md.txt  snf_simulations.data.mendeleev.md.txt  snf_simulations.data.utils.md.txt  snf_simulations.detector.md.txt  snf_simulations.md.txt  snf_simulations.physics.md.txt  snf_simulations.scripts.command_line.md.txt  snf_simulations.scripts.dashboard.md.txt  snf_simulations.scripts.md.txt  snf_simulations.spec.md.txt  snf_simulations.utils.md.txt
_sources/contributing/: contributing.md.txt  index.md.txt
_sources/user_guide/: flux.ipynb.txt  multiple_casks.ipynb.txt  spectrum.ipynb.txt
antineutrino_spec_data/: I129_an.txt  Rb88_an.txt  Ru106_an.txt  datafunctions.py
antineutrino_spec_data/unused/: Cm249.txt
apidocs/: index.html
apidocs/snf_simulations/: snf_simulations._version.html  snf_simulations.cask.html  snf_simulations.dashboard.html  snf_simulations.data.fispin.html  snf_simulations.data.html  snf_simulations.data.iaea.html  snf_simulations.data.mendeleev.html  snf_simulations.data.utils.html  snf_simulations.detector.html  snf_simulations.html  snf_simulations.physics.html  snf_simulations.scripts.command_line.html  snf_simulations.scripts.dashboard.html  snf_simulations.scripts.html  snf_simulations.spec.html  snf_simulations.utils.html
contributing/: contributing.html  development.html  index.html
delete/: __init__.py
docs/: autodoc2_docstrings_parser.py  cask.md  conf.py  examples.ipynb  index.md  index.rst
docs/contributing/: development.md
docs/user_guide/: about.md  cask.ipynb  cask.md  dashboard.md  flux.ipynb  flux.md  index.md  multiple_casks.ipynb  multiple_casks.md  spectrum.csv  spectrum.ipynb  spectrum.md
simulation_code/: __init__.py  add_casks.py  command_line.py  load_spec.py  plotting.py  sample.py  scale.py
simulation_code/antineutrino_spec_data/: Cm249_an.txt  Pu241_an.txt
snf_simulations/: add_casks.py  add_spec.py  command_line.py  define_proportions.py  flux.py  load_and_scale.py  load_data.py  load_spec.py  plotting.py  sample.py  scale.py
snf_simulations/antineutrino_spec_data/: Ce144_an.txt  Cs137_an.txt
snf_simulations/delete/: detector_signal.py
src/snf_simulations/: __init__.py  cask.py  command_line.py  dashboard.py  define_proportions.py  detector.py  flux.py  load_and_scale.py  load_data.py  physics.py  plotting.py  sample.py  scale.py  spec.py  utils.py
src/snf_simulations/antineutrino_spec_data/: Kr88_an.txt
src/snf_simulations/data/: __init__.py  example.tbQ  fispin.py  iaea.py  isotopes.csv  mendeleev.py  reactor.py  utils.py
src/snf_simulations/data/reactor_data/: hartlepool.csv  sizewell.csv
src/snf_simulations/data/spec_data/: 106rh.csv  106ru.csv  129i.csv  135cs.csv  137cs.csv  144ce.csv  144pr.csv  239np.csv  241pu.csv  242am.csv  88kr.csv  88rb.csv  90sr.csv  90y.csv  93zr.csv  99tc.csv  Am242_an.txt  Ce144_an.txt  Cs135_an.txt  Cs137_an.txt  I129_an.txt  Kr88_an.txt  Np239_an.txt  Pr144_an.txt  Pu241_an.txt  Rb88_an.txt  Rh106_an.txt  Ru106_an.txt  Sr90_an.txt  Tc99_an.txt  Y90_an.txt  Zr93_an.txt
src/snf_simulations/scripts/: __init__.py  command_line.py  dashboard.py
tests/: __init__.py  test_cask.py  test_commandline.py  test_data.py  test_data_fispin.py  test_data_iaea.py  test_data_mendeleev.py  test_data_reactor.py  test_data_utils.py  test_detector.py  test_numpy_root.py  test_physics.py  test_sample.py  test_spec.py  test_spectra.py  test_utils.py
tests/data/: Hartlepool_multiple.csv  Hartlepool_single.csv  Hartlepool_single_0.5.csv  Sizewell_multiple.csv  Sizewell_proportions.csv  Sizewell_single.csv  __init__.py  hartlepool.csv
tests/test_data/: Hartlepool_multiple.csv  Hartlepool_single_0.5.csv  Sizewell_multiple.csv  Sizewell_single_0.5.csv
unused_code/: v_from_B.py
unused_code/BetaData/: 90Sr.txt  90Y.txt  Am242.txt  Am242_fed0.txt  Cm249.txt  Cs137.txt  Cs137_fed0.txt  Pu241.txt  Y90_0fed.txt
user_guide/: cask.html  dashboard.html  flux.html  index.html  multiple_casks.html  spectrum.html
