[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snf_simulations"
# version = ""  # version is determined dynamically from git tags using setuptools_scm
dynamic = ["version"]
description = "Simulate antineutrino spectra for different compositions of spent nuclear fuel."
authors = [
    { name = "Liz Kneale", email = "e.kneale@sheffield.ac.uk" },
    { name = "Zuzanna Leliwa", email = "zleliwa1@sheffield.ac.uk" },
    { name = "Abigail Power", email = "apower3@sheffield.ac.uk" },
    { name = "Martin Dyer", email = "martin.dyer@sheffield.ac.uk" },
]
maintainers = [{ name = "Liz Kneale", email = "e.kneale@sheffield.ac.uk" }]
keywords = ["nuclear", "antineutrino", "spectrum"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib", "pandas>=2.3.3", "mendeleev>=1.1.0"]

[dependency-groups]
dev = [
    { include-group = "docs" },
    "prek>=0.3.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "setuptools-scm>=10.0.5",
    "ty>=0.0.1a19",
]
docs = [
    "myst-nb>=1.4.0",
    "myst-parser>=4.0.1",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-autodoc2>=0.5.0",
]

[project.scripts]
snf-sim = "snf_simulations.scripts.command_line:main"

[project.urls]
homepage = "https://github.com/ekneale/SNF-simulations"
documentation = "https://ekneale.github.io/SNF-simulations"
repository = "https://github.com/ekneale/SNF-simulations"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"snf_simulations.data" = ["*.tbQ"]
"snf_simulations.data.spec_data" = ["*.csv"]

[tool.setuptools_scm]
version_file = "src/snf_simulations/_version.py"

[tool.ruff]
exclude = ["docs"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (errors)
    "F",   # Pyflakes
    "PL",  # pylint
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "I",   # isort
    "ANN", # Type annotation rules
    "D",   # pydocstyle
]
ignore = [
    "D203", # Ignored for Google style docstrings
    "D213", # Ignored for Google style docstrings
]

[tool.ty.analysis]
# Ignore type checks for ROOT
replace-imports-with-any = ["ROOT.**"]
